modification du user profile

--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -4,7 +4,7 @@
 {% load widget_tweaks %}
 
         <div class="row">
-            <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau vol</h2></div>
+            <div class="col"><h2 class="display-4 mt-4 mb-4">Détails du vol</h2></div>
         </div>
         <div class="row">
             <div class="col-1">
