--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -59,7 +59,7 @@
                           <a class="dropdown-item" href="{% url 'new_pilote' %}">Pilote</a>
                           <a class="dropdown-item" href="{% url 'new_immatriculation' %}">Immatriculation</a>
                           <a class="dropdown-item" href="{% url 'new_iata' %}">Aéroport</a>
-                          <a class="dropdown-item" href="{% url 'new_type_avion' %}">Avion</a>
+                          <a class="dropdown-item" href="{% url 'new_type_avion' %}">Type d'Avion</a>
                         </div>
                         <!--<a class="nav-link" href="{% url 'new_vol' %}">Vol</a> #}-->
                     </li>
