--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -7,6 +7,16 @@
 {% else %}
     {% if user.is_authenticated %}
         <div class="row">
+            <div class="col"><h2 class="display-4 mt-4 mb-4">Profil utilisateur</h2></div>
+        </div>
+        <div class="row">
+            <div class="col-1">
+                <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le profil" href="{% url 'edit_profile' username=user.username %}"><i class="fas fa-pencil-alt"></i></a>
+            </div>
+            <div class="col"></div>
+        </div>
+    <hr>
+        <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
                 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
@@ -16,13 +26,76 @@
         <div class="row">
             <div class="col-3"></div>
             <div class="col-6">
-                {{ user.email }}
+                Adresse Mail : {{ user.email }}
+            </div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                Type de client : {{ user.profile.client_type }} <br>
+                Poste actuel : {{ user.profile.get_current_position_display }} <br>
+                Employeur : {{ user.profile.employer }} <br>
             </div>
             <div class="col-3"></div>
         </div>
     {% else %}
     <p>Please {% url 'login' %} to see this page.</p>
     {% endif %}
+    <form class="post-form" method="post">
+        {{ form.media }}
+        {% load widget_tweaks %}
+        {% csrf_token %}
+
+        <div class="form-row">
+            <div class="form-group col-md-3">
+                <div class="fieldWrapper">
+                    {{ user_form.first_name.errors }}
+                    {{ user_form.first_name.label_tag }}
+                    {{ user_form.first_name|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-group col-md-3">
+                <div class="fieldWrapper">
+                    {{ user_form.last_name.errors }}
+                    {{ user_form.last_name.label_tag }}
+                    {{ user_form.last_name|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-group col-md-3">
+                <div class="fieldWrapper">
+                    {{ user_form.email.errors }}
+                    {{ user_form.email.label_tag }}
+                    {{ user_form.email|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-group col-md-3">
+                <div class="fieldWrapper">
+                    {{ profile_form.client_type.errors }}
+                    {{ profile_form.client_type.label_tag }}
+                    {{ profile_form.client_type|add_class:"form-control" }}
+                </div>
+            </div>
+        </div>
+
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <div class="fieldWrapper">
+                    {{ profile_form.current_position.errors }}
+                    {{ profile_form.current_position.label_tag }}
+                    {{ profile_form.current_position|add_class:"form-control" }}
+                </div>
+            </div>
+            <div class="form-group col-md-6">
+                <div class="fieldWrapper">
+                    {{ profile_form.employer.errors }}
+                    {{ profile_form.employer.label_tag }}
+                    {{ profile_form.employer|add_class:"form-control" }}
+                </div>
+            </div>
+        </div>
+        <input type="submit" value="Modifier">
+    </form>
 {% endif %}
 
 {% endblock %}
