--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -2,6 +2,10 @@
 {% block title %} Profil utilisateurs {% endblock %}
 {% block content %}
 
+{{ form.media }}
+{% load widget_tweaks %}
+{{ ProfileForm.media }}
+
 {% if user == "AnonymousUser" %}
 <p>Please {% url 'login' %} to see this page.</p>
 {% else %}
@@ -39,63 +43,68 @@
             </div>
             <div class="col-3"></div>
         </div>
+    {% if is_modified %}
+        <hr>
+        <form class="post-form" method="post">
+            {{ form.media }}
+            {% load widget_tweaks %}
+            {% csrf_token %}
+
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <div class="fieldWrapper">
+                        {{ user_form.first_name.errors }}
+                        {{ user_form.first_name.label_tag }}
+                        {{ user_form.first_name|add_class:"form-control" }}
+                    </div>
+                </div>
+                <div class="form-group col-md-3">
+                    <div class="fieldWrapper">
+                        {{ user_form.last_name.errors }}
+                        {{ user_form.last_name.label_tag }}
+                        {{ user_form.last_name|add_class:"form-control" }}
+                    </div>
+                </div>
+                <div class="form-group col-md-3">
+                    <div class="fieldWrapper">
+                        {{ user_form.email.errors }}
+                        {{ user_form.email.label_tag }}
+                        {{ user_form.email|add_class:"form-control" }}
+                    </div>
+                </div>
+                <div class="form-group col-md-3">
+                    <fieldset disabled>
+                        <div class="fieldWrapper">
+                            {{ profile_form.client_type.errors }}
+                            {{ profile_form.client_type.label_tag }}
+                            {{ profile_form.client_type|add_class:"form-control" }}
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <div class="fieldWrapper">
+                        {{ profile_form.current_position.errors }}
+                        {{ profile_form.current_position.label_tag }}
+                        {{ profile_form.current_position|add_class:"form-control" }}
+                    </div>
+                </div>
+                <div class="form-group col-md-6">
+                    <div class="fieldWrapper">
+                        {{ profile_form.employer.errors }}
+                        {{ profile_form.employer.label_tag }}
+                        {{ profile_form.employer|add_class:"form-control" }}
+                    </div>
+                </div>
+            </div>
+            <input type="submit" value="Modifier">
+        </form>
+        {% endif %}
     {% else %}
     <p>Please {% url 'login' %} to see this page.</p>
     {% endif %}
-    <form class="post-form" method="post">
-        {{ form.media }}
-        {% load widget_tweaks %}
-        {% csrf_token %}
-
-        <div class="form-row">
-            <div class="form-group col-md-3">
-                <div class="fieldWrapper">
-                    {{ user_form.first_name.errors }}
-                    {{ user_form.first_name.label_tag }}
-                    {{ user_form.first_name|add_class:"form-control" }}
-                </div>
-            </div>
-            <div class="form-group col-md-3">
-                <div class="fieldWrapper">
-                    {{ user_form.last_name.errors }}
-                    {{ user_form.last_name.label_tag }}
-                    {{ user_form.last_name|add_class:"form-control" }}
-                </div>
-            </div>
-            <div class="form-group col-md-3">
-                <div class="fieldWrapper">
-                    {{ user_form.email.errors }}
-                    {{ user_form.email.label_tag }}
-                    {{ user_form.email|add_class:"form-control" }}
-                </div>
-            </div>
-            <div class="form-group col-md-3">
-                <div class="fieldWrapper">
-                    {{ profile_form.client_type.errors }}
-                    {{ profile_form.client_type.label_tag }}
-                    {{ profile_form.client_type|add_class:"form-control" }}
-                </div>
-            </div>
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <div class="fieldWrapper">
-                    {{ profile_form.current_position.errors }}
-                    {{ profile_form.current_position.label_tag }}
-                    {{ profile_form.current_position|add_class:"form-control" }}
-                </div>
-            </div>
-            <div class="form-group col-md-6">
-                <div class="fieldWrapper">
-                    {{ profile_form.employer.errors }}
-                    {{ profile_form.employer.label_tag }}
-                    {{ profile_form.employer|add_class:"form-control" }}
-                </div>
-            </div>
-        </div>
-        <input type="submit" value="Modifier">
-    </form>
 {% endif %}
 
 {% endblock %}
