nettoyage du dossier

--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'index' %}">Base de données des vols</a>
+                        <a class="nav-link" href="{% url 'index' %}">Tous les vols</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'somme' %}">Totaux</a>
