--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -21,73 +21,134 @@
         <div class="row">
             <div class="col"></div>
             <div class="col-4">
+
                 <div class="card" >
-                    <div class="card-body text-center">
-                        <h3 class="card-title">{{ vol.date }}</h3>
-                        <h4 class="card-subtitle">{{ vol.depart }} <i class="fas fa-arrow-right"></i> {{ vol.arrivee }}</h4>
+                    <div class="card-header">
+                        <div class="text-secondary"><strong>{{ vol.date }}</strong></div>
+                        <div class="h2 display-5 dat-head">{{ vol.depart }}</div>
+                        <div class="h2 display-5 dat-head" style="text-align:center"><i style="width:24px;" class="fas fa-long-arrow-alt-right"></i></div>
+                        <div class="h2 display-5 dat-head" style="text-align:right">{{ vol.arrivee }}</div>
                     </div>
                     
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item"> 
-                            <div class="card-body text-center">
-                                <h5 class="card-title">Durées <i class="far fa-clock"></i></h5>
-                                <i class="far fa-sun text-warning"></i>
-                                {% if vol.duree_jour %}
-                                    {{ vol.duree_jour }}
-                                {% else %}
-                                    -
-                                {% endif %}
-                                <i class="fas fa-moon text-primary"></i>
-                                {% if vol.duree_nuit %}
-                                    {{ vol.duree_nuit }}
-                                {% else %}
-                                    -
-                                {% endif %}
-                            </div>
-                        </li>
-                        <li class="list-group-item"> 
-                                <div class="card-body text-center">
-                                    <h5 class="card-title"> IFR :
-                                    {% if vol.vol_ifr %}
-                                        {{ vol.get_vol_ifr_display }}</h5>
-                                        <i class="far fa-sun text-warning"></i> {{ vol.duree_ifr_jour }}
-                                        <i class="fas fa-moon text-primary"></i> {{ vol.duree_ifr_nuit }}
-                                    {% else %}
-                                        <i class="fas fa-times-circle text-danger"></i>
-                                    </h5>
-                                    {% endif %}
-                            </div>
-                        </li>
+                    <div class="card-body p-0" style="padding-left:20px !important; padding-right:20px !important;">
+                            <table class="table mb-0">
+                                <tbody>
+                                    <tr>
+                                        <td class="align-middle no-padding" rowspan=2 width="20%" style="border:0;"><p class="h1 display-4 text-secondary">
+                                            <!--<i class="far fa-clock"></i>-->
+                                            <!-- SVG Clock -->
+                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                                 width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+                                            <g>
+                                                <path d="M32,0c-8.547,0-16.583,3.33-22.626,9.375C3.329,15.417,0,23.453,0,32s3.329,16.583,9.374,22.626
+                                                    C15.417,60.671,23.452,64,32,64s16.583-3.33,22.627-9.375C60.671,48.583,64,40.547,64,32s-3.329-16.583-9.374-22.626
+                                                    C48.583,3.329,40.547,0,32,0z M53.213,53.212C47.546,58.879,40.013,62,32,62s-15.546-3.121-21.212-8.789C5.12,47.546,2,40.013,2,32
+                                                    s3.121-15.546,8.788-21.212C16.453,5.121,23.986,2,32,2s15.547,3.122,21.213,8.789C58.88,16.454,62,23.987,62,32
+                                                    S58.88,47.546,53.213,53.212z"/>
+                                                <polygon points="33,12 31,12 31,32.414 40.293,41.707 41.707,40.293 33,31.586    "/>
+                                                <rect x="4" y="31" width="4" height="2"/>
+                                                <rect x="56" y="31" width="4" height="2"/>
+                                                <rect x="31" y="56" width="2" height="4"/>
+                                                <rect x="31" y="4" width="2" height="4"/>
+                                            </g>
+                                            </svg> <!-- SVG Clock -->
 
-                        <li class="list-group-item">Fonction : {{ vol.get_fonction_display }}</li>
-                        <li class="list-group-item">Poste : {{ vol.get_poste_display }}</li>
-                        <li class="list-group-item"> 
-                                <div class="card-body text-center">
-                                    <h5 class="card-title"> Simulateur  
-                                    {% if vol.vol_simu %}
-                                        <i class="fas fa-check-circle text-success"></i></h5>
-                                        {{ vol.duree_simu }}
-                                    {% else %}
-                                        <i class="fas fa-times-circle text-danger"></i>
-                                    </h5>
-                                    {% endif %}
-                            </div>
-                        </li>
-                        <li class="list-group-item">Observations : {{ vol.observation }}</li>
-                    </ul>
+                                        </p></td>
+                                        <td class="align-middle" width="80%" style="border:0;">
+                                            <!--<i class="far fa-sun text-secondary"></i>-->
+                                            <!-- SVG Sun -->
+                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                             width="30px" height="30px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+                                        <g>
+                                            <path d="M32,49c9.374,0,17-7.626,17-17s-7.626-17-17-17s-17,7.626-17,17S22.626,49,32,49z M32,17c8.271,0,15,6.729,15,15
+                                                s-6.729,15-15,15s-15-6.729-15-15S23.729,17,32,17z"/>
+                                            <rect x="31" width="2" height="10"/>
+                                            <rect x="31" y="54" width="2" height="10"/>
+                                            <rect x="54" y="31" width="10" height="2"/>
+                                            <rect y="31" width="10" height="2"/>
+                                            <rect x="49.5" y="9.964" transform="matrix(0.7071 0.7071 -0.7071 0.7071 24.337 -31.7548)" width="2" height="7.071"/>
+                                            <rect x="12.5" y="46.964" transform="matrix(0.7071 0.7071 -0.7071 0.7071 39.663 5.2452)" width="2" height="7.071"/>
+                                            <rect x="46.964" y="49.5" transform="matrix(-0.7071 -0.7071 0.7071 -0.7071 50.5 121.9178)" width="7.071" height="2"/>
+                                            <rect x="9.964" y="12.5" transform="matrix(0.7071 0.7071 -0.7071 0.7071 13.5 -5.5919)" width="7.071" height="2"/>
+                                        </g>
+                                        </svg> <!-- SVG Sun -->
+                                            {% if vol.duree_jour %}
+                                                {{ vol.duree_jour }}
+                                            {% else %}
+                                                -
+                                            {% endif %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-middle" style="border:0;">
+                                            <!--<i class="far fa-moon text-secondary"></i>-->
+                                            <!-- SVG Moon -->
+                                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                             width="30px" height="30px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+                                        <g>
+                                            <path d="M29,64c17.645,0,32-14.355,32-32S46.645,0,29,0c-4.17,0-9.019,0.81-12.352,2.064l-2.084,0.784l1.971,1.037
+                                                C25.322,8.509,31,17.189,31,26c0,13.785-11.215,25-25,25l-0.69,0.002l-2.511-0.059l1.437,1.701C10.239,59.755,19.497,64,29,64z
+                                                 M33,26c0-8.853-5.247-17.561-13.538-22.738C22.346,2.478,25.869,2,29,2c16.542,0,30,13.458,30,30S45.542,62,29,62
+                                                c-8.175,0-16.152-3.341-21.76-9.028C21.555,52.322,33,40.473,33,26z"/>
+                                        </g>
+                                        </svg> <!-- SVG Moon -->
+                                            {% if vol.duree_nuit %}
+                                                {{ vol.duree_nuit }}
+                                            {% else %}
+                                                -
+                                            {% endif %}
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-middle no-padding"><strong>{% if vol.vol_ifr != "0" %}<span class="text-body">IFR :</span> {{ vol.get_vol_ifr_display }}{% else %}<span class="text-secondary">IFR</span>{% endif %}</td></strong>
+                                        <td class="align-middle text-center"><i class="far fa-clock"></i><span class="text-secondary">{% if vol.vol_ifr != "0" %} {{ vol.duree_ifr }}{% else %}<span class="text-secondary">&ensp; &mdash;{% endif %}</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-middle text-uppercase no-padding"><strong>Fonction</strong></td>
+                                        <td class="align-middle text-center"><span class="text-secondary">{{ vol.get_fonction_display }}</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-middle text-uppercase no-padding"><strong>Poste</strong></td>
+                                        <td class="align-middle text-center"><span class="text-secondary">{{ vol.get_poste_display }}</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td class="align-middle text-uppercase no-padding"><strong>{% if vol.vol_simu %}<span class="text-body">Simulateur</span>{% else %}<span class="text-secondary">Simulateur</span>{% endif %}</td></strong>
+                                        <td class="align-middle text-center"><i class="far fa-clock"></i><span class="text-secondary">{% if vol.vol_simu %} {{ vol.duree_simu }}{% else %}<span class="text-secondary">&ensp; &mdash;{% endif %}</span></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2" class="text-uppercase no-padding"><strong>Observations</strong></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="2" style="border:0;" class="no-padding">{{ vol.observation }}</td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
+                    </div>
                 </div>
             </div>
             <div class="col-1"></div>
             <div class="col-3">
+
                 <div class="card" >
-                    <div class="card-body text-center">
-                        <h3 class="card-title">Avion <i class="fas fa-plane"></i> </h3>
+                    <div class="card-header"><h3>Avion <i class="fas fa-plane"></i></h3></div>
+                    <div class="card-body p-0">
+                        <table class="table mb-0">
+                            <tbody>
+                            <tr>
+                                <td class="align-middle">Immatriculation</td>
+                                <td class="align-middle">{{ vol.immatriculation }}</td>
+                            </tr>
+                            <tr>
+                                <td class="align-middle">Type d'avion</td>
+                                <td class="align-middle">{{ vol.immatriculation.type_avion }}</td>
+                            </tr>
+                            <tr>
+                                <td class="align-middle">Moteurs</td>
+                                <td class="align-middle">{{ vol.immatriculation.type_avion.get_nb_moteurs_display }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Immatriculation : {{ vol.immatriculation }}</li>
-                        <li class="list-group-item">Type d'avion : {{ vol.immatriculation.type_avion }}</li>
-                        <li class="list-group-item">Moteurs : {{ vol.immatriculation.type_avion.get_nb_moteurs_display }}</li>
-                    </ul>
                 </div>
             </div>
         </div>
@@ -159,4 +220,15 @@
             </div>
             <div class="col"></div>
         </div>
+<style type="text/css">
+    .dat-head{
+        width:33.3%;
+        display:inline-block;
+        float:left;
+    }
+    .no-padding{
+        padding-left:0px !important;
+    }
+
+        </style>
 {% endblock %}
