--- a/vol/templates/vol/homepage.html
+++ b/vol/templates/vol/homepage.html
@@ -3,19 +3,16 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-md-6 offset-md-3">
             <h1>Base de données de vol.</h1>
         </div>
-        <div class="col-3"></div>
+        
     </div>
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-md-6 offset-md-3">
             <p>Cette application vous permettra de saisir et sauvegarder vos heures de vol de manière simple et sécurisée.</p>
             {% lorem 3 p %}
         </div>
-        <div class="col-3"></div>
     </div>
 
 {% endblock %}
