--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -66,7 +66,7 @@ $(document).ready(function() {
                                             -
                                         {% endif %}</td>
                                     <td>{% if vol.duree_nuit %}
-                                            {{ vol.duree_nuit }}
+                                            {{ vol.duree_nuit_HHmm }}
                                         {% else %}
                                             -
                                         {% endif %}</td>
