--- a/vol/templates/vol/prices.html
+++ b/vol/templates/vol/prices.html
@@ -12,19 +12,15 @@
 {% block content %}
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-md-6 offset-3">
             <h1>Money money money</h1>
         </div>
-        <div class="col-3"></div>
     </div>
 
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-md-6 offset-3">
             {% lorem 3 p %}
         </div>
-        <div class="col-3"></div>
     </div>
 
 {% endblock %}
