--- a/vol/templates/registration/logged_out.html
+++ b/vol/templates/registration/logged_out.html
@@ -5,10 +5,14 @@
 <div class="container">
 
     <div class="row">
-        <p>Logged out!</p>
+        <div class="col-md-2 offset-md-5 mt-4">
+        	<p>Déconnecté</p>
+    	</div>
     </div>
     <div class="row">
-        <p><a href="/">Homepage</a></p>
+    	<div class="col-md-2 offset-md-5">
+        	<p><a href="/">Page d'accueil</a></p>
+        </div>
     </div>
 
 </div>
