--- a/vol/templates/registration/login.html
+++ b/vol/templates/registration/login.html
@@ -3,8 +3,67 @@
 {% block content %}
 
 
+<div class="col-3 mt-6 align-self-center">
+    <div class="row">
+        <h2 class="display-4 align-self-center mt-4 mb-4">Connexion</h2>
+    </div>
+
+
+    {% if form.errors %}
+    <div class="row">
+        <div class="alert alert-danger" role="alert">Votre nom d'utilisateur et votre mot de passe ne correspondent pas. Veuillez réessayer.</div>
+    </div>
+    {% endif %}
+
+    {% if next %}
+    <div class="row">
+        {% if user.is_authenticated %}
+        <div class="alert alert-danger" role="alert">Votre compte n'a pas accès à cette page. Pour continuer, veuillez vous connecter avec un compte qui y a accès.</div>
+        {% else %}
+        <div class="alert alert-danger" role="alert">Veuillez vous connecter pour voir cette page.</div>
+        {% endif %}
+    </div>
+    {% endif %}
+
+
+    <div class="row">
+
+        <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            {% load widget_tweaks %}
+            <div class="row">
+                <div class="form-group col-6">
+                    <div class="fieldWrapper">
+                        {{ form.username.label_tag }}
+                        {{ form.username|add_class:"form-control" }}
+                    </div>
+                </div>
+                <div class="form-group col-6">
+                    <div class="fieldWrapper">
+                        {{ form.password.label_tag }}
+                        {{ form.password|add_class:"form-control" }}
+                    </div>
+                </div>
+
+
+            </div>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Connexion</button>
+            <input type="hidden" name="next" value="{{ next }}">
+            <p class="mt-2 text-right"><a href="{# url 'password_reset' #}">Mot de passe perdu ?</a></p>
+
+        </form></div>
+
+
+    </div>
+
+
+
+
 <div class="row">
-    <h2 class="display-4 align-self-center mt-4 mb-4">Connexion</h2>
+    <div class="col-md-6">
+        <h2 class="display-4 align-self-center mt-4 mb-4">Connexion</h2>
+    </div>    
 </div>
 
 {% if form.errors %}
@@ -43,7 +102,7 @@
         </div>
         <div class="row">
             <div class="form-group col-md-6 align-self-center">
-                <button class="btn btn-lg btn-primary btn-block btn-sm" type="submit" value="Login">Connexion</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Connexion</button>
                 <input type="hidden" name="next" value="{{ next }}">
             </div>
         </div>
@@ -51,12 +110,11 @@
 
     
     <div class="row">
-        <div class="col-md-6 align-self-center">
+        <div class="col-md-6 align-self-end">
             {# Assumes you setup the password_reset view in your URLconf #}
             <a href="{# url 'password_reset' #}">Mot de passe perdu ?</a>
         </div>
     </div>
-
 
 
 {% endblock %}
