--- a/vol/templates/registration/logged_out.html
+++ b/vol/templates/registration/logged_out.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 
-<div class="container">
+<div class="col-6 offset-md-3">
+    <div class="row">
+        <h2 class="display-4 align-self-center mt-4 mb-4">Déconnecté</h2>
+    </div>
 
     <div class="row">
-        <div class="col-md-2 offset-md-5 mt-4">
-        	<p>Déconnecté</p>
-    	</div>
+        <p><a href="/">Page d'accueil</a></p>
     </div>
-    <div class="row">
-    	<div class="col-md-2 offset-md-5">
-        	<p><a href="/">Page d'accueil</a></p>
-        </div>
-    </div>
+
 
 </div>
+
+
+
 {% endblock %}
