refactorisation du code pour un fonctionnement des vues par classes

--- a/vol/templates/vol/base.html
+++ b/vol/templates/vol/base.html
@@ -58,7 +58,7 @@
                           <div class="dropdown-divider"></div>
                           <a class="dropdown-item" href="{% url 'new_pilote' %}">Pilote</a>
                           <a class="dropdown-item" href="{% url 'new_immatriculation' %}">Immatriculation</a>
-                          <a class="dropdown-item" href="{% url 'new_iata' %}">Aéroport</a>
+                          <a class="dropdown-item" href="{% url 'new_code_iata' %}">Aéroport</a>
                           <a class="dropdown-item" href="{% url 'new_type_avion' %}">Type d'Avion</a>
                         </div>
                         <!--<a class="nav-link" href="{% url 'new_vol' %}">Vol</a> #}-->
