--- a/vol/templates/vol/iata_add.html
+++ b/vol/templates/vol/iata_add.html
@@ -6,21 +6,21 @@
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
-        {{ form_iata.non_field_errors }}
+        {{ form.non_field_errors }}
 
         <div class="form-row">
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_iata.code_iata.errors }}
-                    {{ form_iata.code_iata.label_tag }}
-                    {{ form_iata.code_iata|add_class:"form-control" }}
+                    {{ form.code_iata.errors }}
+                    {{ form.code_iata.label_tag }}
+                    {{ form.code_iata|add_class:"form-control" }}
                 </div>
             </div>
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_iata.ville.errors }}
-                    {{ form_iata.ville.label_tag }}
-                    {{ form_iata.ville|add_class:"form-control" }}
+                    {{ form.ville.errors }}
+                    {{ form.ville.label_tag }}
+                    {{ form.ville|add_class:"form-control" }}
                 </div>
             </div>
         </div>
@@ -52,12 +52,16 @@
                                 <td>{{ code_iata.code_iata }}</td>
                                 <td>{{ code_iata.ville }}</td>
                                     <td class="text-center">
-                                        <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier le code IATA" href="{% url 'edit_iata' pk=code_iata.pk %}">
+                                        <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier le code IATA" href="{% url 'edit_code_iata' pk=code_iata.pk %}">
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-pencil-alt"></i></button>
                                         </a>
-                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le code IATA" href="{% url 'remove_iata' pk=code_iata.pk %}" onclick="return confirm('Are you sure you want to delete this?')">
-                                            <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
-                                        </a>
+                                        <form action="{% url 'remove_code_iata' pk=code_iata.pk %}" method="post" style="display: inline;">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="iata_id" value="{{ iata.id }}" />
+                                            <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer l'aéroport" onclick="return confirm('Are you sure you want to delete this?')">
+                                                <button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                            </a>
+                                        </form>
                                     </td>
                                 </td>
                             </tr>
