--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -1,26 +1,27 @@
 {% extends 'vol/base.html' %}
 {% block title %} Nouveau type d'avion {% endblock %}
 {% block content %}
+
 <div class="row">
     <div class="col"><h2 class="display-4 mt-4 mb-4">Nouveau type d'avion</h2></div>
 </div>
 {% load widget_tweaks %}
     <form method="POST" class="post-form" id="new_pilote">{% csrf_token %}
-        {{ form_type_avion.non_field_errors }}
+        {{ form.non_field_errors }}
 
         <div class="form-row">
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_type_avion.type_avion.errors }}
-                    {{ form_type_avion.type_avion.label_tag }}
-                    {{ form_type_avion.type_avion|add_class:"form-control" }}
+                    {{ form.type_avion.errors }}
+                    {{ form.type_avion.label_tag }}
+                    {{ form.type_avion|add_class:"form-control" }}
                 </div>
             </div>
             <div class="form-group col-md-3">
                 <div class="fieldWrapper">
-                    {{ form_type_avion.nb_moteurs.errors }}
-                    {{ form_type_avion.nb_moteurs.label_tag }}
-                    {{ form_type_avion.nb_moteurs|add_class:"form-control" }}
+                    {{ form.nb_moteurs.errors }}
+                    {{ form.nb_moteurs.label_tag }}
+                    {{ form.nb_moteurs|add_class:"form-control" }}
                 </div>
             </div>
         </div>
@@ -56,9 +57,13 @@
                                         <a class="management_links" data-toggle="tooltip" data-placement="top" title="Modifier le type d'avion" href="{% url 'edit_type_avion' pk=type_avion.pk %}">
                                             <button type="button" class="btn btn-primary btn-sm"><i class="fas fa-pencil-alt"></i></button>
                                         </a>
-                                        <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le type d'avion" href="{% url 'remove_type_avion' pk=type_avion.pk %}" onclick="return confirm('Are you sure you want to delete this?')">
-                                            <button type="button" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
-                                        </a>
+                                        <form action="{% url 'remove_type_avion' pk=type_avion.pk %}" method="post" style="display: inline;">
+                                            {% csrf_token %}
+                                            <input type="hidden" name="type_avion_id" value="{{ type_avion.id }}" />
+                                            <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le type d'avion" onclick="return confirm('Are you sure you want to delete this?')">
+                                                <button type="submit" class="btn btn-danger btn-sm"><i class="far fa-trash-alt"></i></button>
+                                            </a>
+                                        </form>
                                     </td>
                                 </td>
                             </tr>
