--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -8,11 +8,17 @@
         </div>
         <div class="row">
             <div class="col-1">
-                <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le vol" href="{# url 'edit_vol' pk=vol.pk #}"><i class="fas fa-pencil-alt"></i></a>
+                <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="fas fa-pencil-alt"></i></a>
             </div>
             <div class="col"></div>
             <div class="col-1">
-                <a class="btn btn-outline-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" href="{# url 'remove_vol' pk=vol.pk #}" onclick="return confirm('Are you sure you want to delete this?')"><i class="far fa-trash-alt"></i></a>
+                <form action="{% url 'remove_vol' pk=vol.pk %}" method="post" style="display: inline;">
+                    {% csrf_token %}
+                    <input type="hidden" name="immatriculation_id" value="{{ vol.id }}" />
+                    <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" onclick="return confirm('Are you sure you want to delete this?')">
+                        <button type="submit" class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button>
+                    </a>
+                </form>
             </div>
         </div>
 
